--- a/package.json
+++ b/package.json
@@ -6,16 +6,18 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/codemirror": "^5.60.2",
     "@types/jest": "^26.0.24",
     "@types/node": "^12.20.16",
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
     "@types/styled-components": "^5.1.11",
     "axios": "^0.21.1",
+    "codemirror": "^5.62.0",
     "react": "^17.0.2",
+    "react-codemirror2": "^7.2.1",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "react-simple-code-editor": "^0.11.0",
     "typescript": "^4.3.5",
     "web-vitals": "^1.1.2"
   },
